--- a/package.json
+++ b/package.json
@@ -21,9 +21,17 @@
     "s-js": "~0.4.9"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
+    "babel-eslint": "^10.0.1",
     "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "jest": "~24.7.1",
+    "prettier": "^1.17.0",
     "rollup": "^1.10.0",
-    "rollup-plugin-node-resolve": "^4.1.0"
+    "rollup-plugin-node-resolve": "^4.1.0",
+    "typescript": "^3.4.4"
   }
 }
