--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "s-js": "~0.4.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "babel-eslint": "^10.0.1",
@@ -31,6 +32,7 @@
     "jest": "~24.7.1",
     "prettier": "^1.17.0",
     "rollup": "^1.10.0",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-node-resolve": "^4.1.0",
     "typescript": "^3.4.4"
   }
