--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "sideEffects": false,
   "scripts": {
     "prebuild": "rimraf dist/* lib/* types/*",
-    "build": "rollup -c && tsc",
+    "build": "run-p -cnl build:*",
+    "build:js": "rollup -c",
+    "build:types": "tsc",
     "prepublishOnly": "npm run build",
     "test": "npm run build && jest --coverage"
   },
@@ -33,6 +35,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "jest": "~24.7.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.10.0",
